# webrtc_tutorial

client/capture_module/: CMakeLists.txt  desktop_capturer_callback.cxx  desktop_capturer_callback.h  desktop_capturer_wrapper.cxx  desktop_capturer_wrapper.h  main.cxx  runComamand _64bit.bat  runComamand.bat
client/webrtc_peer/: CMakeLists.txt  common_def.h  plugin_api.h  runComamand.bat  simple_peer_connection.h  webrtc_peer.cxx  webrtc_peer.h
document/: details.txt  links.txt
document/SSL_issues/: differntPc_secure_signaling_not_work_internet_server.txt  differnt_dtls_on_audio_disable_differnt_pc_working.txt  dtls_on_audio_enable_differnt_pc_internet_server.txt  dtls_on_audio_false_set_differnt_pc_working.txt  links.txt
todo/: todo_list.txt
